--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="This is a skill assesment React App meant to showcase said dev's skills" />
-    <title>Vite + React</title>
+    <title>Social Brothers Blogger</title>
   </head>
   <body>
     <div id="root"></div>
